# python-automation-tool

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
src/python_automation_tool/: __init__.py  __main__.py  batch_renamer.py  cli.py  csv_processor.py  file_operations.py  filters.py  history.py  logging_config.py  models.py  reporting.py  utils.py
tests/: test_batch_renamer.py  test_cli_integration.py  test_csv_processor.py  test_file_operations.py  test_filters.py  test_history.py
